  your cart into storage as well as from the inventory. Example:
  Zargon 0 2 0 1
  Automatically put Zargon into the cart while leveling, then storage later.
- cartMaxWeight (weight amount)
  Once the cart weight is above this amount, no longer auto add to cart.
  Default in config.txt is 7900, 100 less than the maximum.

Internal:
- Obsolete getActorHash() function removed (use Actor::get() instead).
- The format of $npcs_lut has changed, IDs are completely abandoned.
- Attack AI routines should now support players as well.
- New Match::cartItem() function, similar to Match::inventoryItem().
- The S and L pack types have been completely removed. Do not use these
  anymore; use v and V respectively.
- 'ai print' command should mangle less characters into '.'.
- Moved packets to Network/Receive.pm:
	  cart_item_added
	  cart_item_removed
	  item_used
- New whenFlag/whenNotFlag condition references %flags in checkSelfCondition.
  Currently, only plugins or 'eval' command could change %flags so this is
  only useful to developers (you can turn on/off groups of skill blocks easily
  using %flags now).
- whenGroundStatus() now takes a third argument $mine which will make it only
  check for spells originating from you.
- inventory/storage/cart item added/removed packets now set $args->{item}
  so that plugins can access it.
- $ai_v{temp}{pvp} moved to $pvp because the former seems to get erroneously
  cleared sometimes.
- New Actor#snipable method; boolean whether you have snipable LOS to the
  actor.

Credits:
- doenet: chatLangCode bugfixes.
- isieo: attackComboSlot fixes/improvements.
- hakore: commanddescriptions.txt


==================
### 1.6.3
==================

New features:
- Support for baby classes! Kore will now be able to identify these
  classes correctly.
- Storage kafra password. See storageAuto_password below.
- Ability to evade Freya's anti-bot system.
- Support for eAthena servers using sakexe628. Use serverType 5 for these.

Bug fixes: